[tool.poetry]
name = "asg-to-calendar"
version = "0.1.0"
description = "Imports assignments into a google calendar"
authors = ["lk-receiving <lk.receiving@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
